--- a/CHANGES
+++ b/CHANGES
@@ -1,9 +1,10 @@
 
-0.0.2
+0.0.3
+ - Fixed base and directory bugs
 
- * synced dependencies
+0.0.2
+ - synced dependencies
 
 0.0.1
-
- * removed erroneous "util" package dependency.
+ - removed erroneous "util" package dependency.
 
