--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,10 @@
 
+0.0.6
+ - fixed bug in directory for relative directories
+
+0.0.4
+ - removed superfluous "q" package dependency.
+
 0.0.3
  - Fixed base and directory bugs
 
